--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -22,6 +22,7 @@
     height: 95px;
     border-radius: 100px;
     background: #F7F7F8;
+    padding: 0 34px;
 
     @include for-size(xxxl) {
       max-width: 1596px;
@@ -31,44 +32,22 @@
       height: 65px;
     }
 
-    &__logo {
+    .menu {
       display: flex;
-      align-items: center;
-      text-decoration: none;
+      gap: 26px;
 
-      &:hover {
-        cursor: pointer;
+
+      &__link {
+        font-family: 'Roboto';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
-      &__text {
-        display: inline-block;
-        margin-left: 16px;
-        font-family: 'Rubik';
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 28.44px;
-        color: white;
-      }
-
-    }
-
-    &__link {
-      text-decoration: none;
-      margin: 0 12px;
-      //ToDo changed
-      font-family: 'MontserratSemiBold';
-      font-size: 16px;
-      line-height: 26px;
-      letter-spacing: -0.10000000149011612px;
-      color: white;
-
-      @include for-size(m) {
-        font-size: 14px;
-      }
-
-      &:hover {
-        cursor: pointer;
-      }
     }
 
     &__controls {
@@ -78,3 +57,4 @@
     }
   }
 }
+
