--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,11 @@ code {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+.menu__link__active {
+  padding: 12px 24px;
+  border-radius: 82px;
+  color: white;
+  background-color: #262626;
+}
