--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -42,6 +42,10 @@
       &__header {
         @include h1();
         color: black;
+
+        &__fintech {
+          color: $mainBlueColor;
+        }
       }
 
 
