--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -14,7 +14,7 @@
 
   .main {
     width: 100%;
-    max-width: 1596px;
+    max-width: $maxCiteWidth;
     max-height: 636px;
     display: flex;
     align-items: center;
