--- a/src/components/projects/components/finul/Finul.module.scss
+++ b/src/components/projects/components/finul/Finul.module.scss
@@ -4,11 +4,17 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 
   .image {
     max-width: 100%;
+
+    @include for-size(xl) {
+      max-width: 80%;
+    }
+
     @include for-size(l) {
-      max-width: 90%;
+      max-width: 60%;
     }
   }
 
@@ -16,5 +22,8 @@
     @include h1();
     text-align: center;
     color: $mainBlueColor;
+    @include for-size(xl) {
+      max-width: 90%;
+    }
   }
 }
