--- a/src/variables.scss
+++ b/src/variables.scss
@@ -17,7 +17,8 @@ $mainHeader3LineHeight: 45px;
 $mainHeader4FontSize: 24px;
 $mainHeader4LineHeight: 28px;
 
-$maxCiteWidth: 1596px;
+$maxCiteWidthPx: 1596px;
+$maxCiteWidthVw: 1596px;
 
 
 
