--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -2,6 +2,6 @@
 
 .container {
   margin: $defaultVerticalDistance auto;
-  max-width: $maxCiteWidth;
+  max-width: $maxCiteWidthPx;
   padding: 0 15px;
 }
