--- a/src/components/how-to-start/HowToStart.module.scss
+++ b/src/components/how-to-start/HowToStart.module.scss
@@ -1,103 +1,116 @@
 @import "src/variables";
 
 .container {
-  margin: $defaultVerticalDistance auto;
-  padding: 0 $minifiedHorizontalDistance;
   width: 100%;
-  max-width: $maxCiteWidthPx;
+  display: flex;
+  justify-content: center;
 
-  .header {
-    @include h1();
-    text-align: center;
-    margin-bottom: 80px;
-  }
-
-  .steps {
-    width: 100%;
+  .content {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    width: 100%;
+    max-width: $maxCiteWidthPx;
+    align-items: center;
+    margin: 198px 8.4375vw 0;
 
-    @include for-size(l) {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .step-container {
-      max-width: 466px;
+    .info {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      padding: 0 5px;
 
-
-      @include for-size(l) {
-        max-width: 90%;
-        flex-direction: row;
-        align-items: center;
-        gap: 15px;
+      .header {
+        @include h1();
+        text-align: center;
+        margin-bottom: 80px;
       }
 
-      .circle-container {
-        background: linear-gradient(180deg, rgba(51, 99, 255, 0.05) 0%, rgba(51, 99, 255, 0) 100%);
-        width: 98px;
-        height: 98px;
-        padding: 12px;
-        border-radius: 50%;
+      .steps {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
 
-        &__circle {
-          width: 74px;
-          height: 74px;
-          padding: 20px 0px 0px 0px;
-          gap: 10px;
-          border-radius: 50%;
-          border: 1px solid;
-          background: linear-gradient(180deg, rgba(51, 99, 255, 0.1) -66.22%, rgba(51, 99, 255, 0) 85.46%);
-          border: 1px solid;
-          border-image-source: linear-gradient(180deg, rgba(51, 99, 255, 0.2) -173.65%, rgba(51, 99, 255, 0) 87.22%);
-          color: #338BFF;
-          font-family: 'Roboto';
-          font-size: 24px;
-          font-weight: 900;
-          line-height: 28.13px;
-          text-align: center;
-
-        }
-      }
-
-      .step-info {
-
-        &__header {
-          margin: 30px 0 20px 0;
-          font-family: 'Roboto';
-          font-size: 32px;
-          font-weight: 500;
-          line-height: 48px;
-          text-align: center;
-          color: #1A1A1A;
+        @include for-size(l) {
+          flex-direction: column;
+          align-items: center;
         }
 
-        &__caption {
-          font-family: 'Roboto';
-          font-size: 18px;
-          font-weight: 400;
-          line-height: 27px;
-          text-align: center;
+        .step-container {
+          max-width: 532px;
+          width: 27.67vw;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: 0 5px;
+
 
           @include for-size(l) {
-            text-align: left;
+            max-width: 90%;
+            width: unset;
+            flex-direction: row;
+            align-items: center;
+            gap: 15px;
           }
 
+          .circle-container {
+            background: linear-gradient(180deg, rgba(51, 99, 255, 0.05) 0%, rgba(51, 99, 255, 0) 100%);
+            width: 98px;
+            height: 98px;
+            padding: 12px;
+            border-radius: 50%;
+
+            &__circle {
+              width: 74px;
+              height: 74px;
+              padding: 20px 0px 0px 0px;
+              gap: 10px;
+              border-radius: 50%;
+              border: 1px solid;
+              background: linear-gradient(180deg, rgba(51, 99, 255, 0.1) -66.22%, rgba(51, 99, 255, 0) 85.46%);
+              border: 1px solid;
+              border-image-source: linear-gradient(180deg, rgba(51, 99, 255, 0.2) -173.65%, rgba(51, 99, 255, 0) 87.22%);
+              color: #338BFF;
+              font-family: 'Roboto';
+              font-size: 24px;
+              font-weight: 900;
+              line-height: 28.13px;
+              text-align: center;
+
+            }
+          }
+
+          .step-info {
+
+            &__header {
+              margin: 30px 0 20px 0;
+              font-family: 'Roboto';
+              font-size: 32px;
+              font-weight: 500;
+              line-height: 48px;
+              text-align: center;
+              color: #1A1A1A;
+            }
+
+            &__caption {
+              font-family: 'Roboto';
+              font-size: 18px;
+              font-weight: 400;
+              line-height: 27px;
+              text-align: center;
+
+              @include for-size(l) {
+                text-align: left;
+              }
+
+            }
+          }
         }
       }
     }
   }
+
+  .line {
+    width: 0;
+    border-right: 1px solid #262626;
+  }
 }
-
-.line {
-  width: 0;
-  border-right: 1px solid #262626;
-}
-
-
 
 
