--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,7 @@
 //variables
 
-$defaultVerticalDistance: 150px;
+$defaultVerticalDistancePx: 150px;
+$defaultVerticalDistanceVw: 7.8125vw;
 $minifiedVerticalDistance: 50px;
 $defaultHorizontalDistance: 162px;
 $minifiedHorizontalDistance: 15px;
