--- a/src/components/projects/components/open-banking-api/OpenBankingApi.module.scss
+++ b/src/components/projects/components/open-banking-api/OpenBankingApi.module.scss
@@ -1,7 +1,7 @@
 @import "src/variables";
 
 .container {
-  margin: $defaultVerticalDistance 0 0;
+  margin: $defaultVerticalDistanceVw 0 0;
   max-width: 100%;
   display: flex;
   flex-direction: column;
