--- a/src/components/how-to-start/HowToStart.module.scss
+++ b/src/components/how-to-start/HowToStart.module.scss
@@ -11,7 +11,7 @@
     width: 100%;
     max-width: $maxCiteWidthPx;
     align-items: center;
-    margin: 10.3125vw 8.4375vw 0;
+    margin: 198px 8.4375vw 0;
 
     .info {
       display: flex;
