--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -8,8 +8,8 @@
 
   .content {
     margin: 0 auto;
-    width: 66.718vw;
     margin: 0 8.4375vw;
     max-width: $maxCiteWidthPx;
+    width: 100%;
   }
 }
