--- a/src/components/shared/info-card/InfoCard.module.scss
+++ b/src/components/shared/info-card/InfoCard.module.scss
@@ -28,6 +28,7 @@
     &__header {
       display: flex;
       align-items: center;
+      width: 100%;
       font-family: 'Roboto';
       font-size: 32px;
       font-weight: 500;
