--- a/src/components/info-cards/InfoCards.module.scss
+++ b/src/components/info-cards/InfoCards.module.scss
@@ -18,7 +18,7 @@
     margin-bottom: 80px;
   }
 
-  .processes-info {
+  .info-cards-info {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
