--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  background: linear-gradient(white 18%, #3363FF08 18% 100%);
 
   .content {
     margin: 0 auto;
