--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -1,11 +1,24 @@
 @import 'src/variables';
 
+
 .container {
   margin-top: $defaultVerticalDistancePx;
   width: 100%;
   display: flex;
   justify-content: center;
   background: linear-gradient(white 18%, #3363FF08 18% 100%);
+
+  @include for-size(xl) {
+    background: linear-gradient(white 16%, #3363FF08 16% 100%);
+  }
+
+  @include for-size(l) {
+    background: linear-gradient(white 15%, #3363FF08 15% 100%);
+  }
+
+  @include for-size(m) {
+    background: linear-gradient(white 14%, #3363FF08 14% 100%);
+  }
 
   .content {
     margin: 0 auto;
