--- a/src/components/get-consultation/GetConsultation.module.scss
+++ b/src/components/get-consultation/GetConsultation.module.scss
@@ -1,5 +1,51 @@
+@import "src/variables";
+
 .container {
   width: 100%;
   display: flex;
   justify-content: center;
+
+  .content {
+    position: relative;
+    margin: $defaultVerticalDistancePx 8.4375vw;
+    max-width: $maxCiteWidthPx;
+    width: 100%;
+    padding: 80px;
+    border-radius: 20px;
+    border: 1px solid;
+    z-index: 1;
+    background: linear-gradient(0deg, #1C1C1C, #1C1C1C), linear-gradient(267.5deg, #1C1C1C 40.67%, rgba(28, 28, 28, 0) 99.81%);
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 10px;
+      width: 10px;
+      clip-path: polygon(100% 0, 0% 100%, 0 0);
+      background-color: white;
+    }
+
+    @include for-size(xxl) {
+      padding: 4.166vw;
+    }
+
+    .dots {
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      z-index: -1;
+    }
+
+    .header {
+      @include h1();
+      color: white;;
+    }
+  }
+
+  .get-consultation {
+
+  }
 }
