--- a/src/components/get-consultation/GetConsultation.module.scss
+++ b/src/components/get-consultation/GetConsultation.module.scss
@@ -47,10 +47,20 @@
 
   .get-consultation-container {
     display: flex;
+    max-width: 594px;
+    margin-top: 64px;
+
+    @include for-size(xxl) {
+      width: 30.9375vw;
+    }
 
     form {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
 
-      .base-input {
+      @mixin base-input() {
         padding: 8px 12px 8px 12px;
         border-radius: 2px;
         border: 1px solid #D9D9D9;
@@ -59,9 +69,53 @@
         font-weight: 400;
         line-height: 24px;
         text-align: left;
-        :active {
-          border: 0;
+        width: calc((100% - 14px)/ 2);
+        margin-bottom: 20px;
+        transition: outline .1s ease-in;
+      }
+
+      @mixin big-input() {
+        @include base-input();
+        width: 100%;
+      }
+
+      .base-input {
+        @include base-input();
+
+        &:focus-visible {
+          outline: 2px solid #338BFF;
         }
+      }
+
+      .big-input {
+        @include big-input();
+
+        &:focus-visible {
+          outline: 2px solid #338BFF;
+        }
+      }
+
+      .accept {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 3px;
+        font-family: 'Roboto';
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 22px;
+        text-align: left;
+        color: #FEFFFA;
+        margin-bottom: 48px;
+
+
+        input {
+          width: 16px;
+          height: 16px;
+          border-radius: 2px;
+          border: 1px solid #D9D9D9
+        }
+
       }
 
     }
