--- a/src/components/shared/button/Button.module.scss
+++ b/src/components/shared/button/Button.module.scss
@@ -29,6 +29,18 @@
   &_black {
     @include accept-button();
     background-color: #1C1C1C;
+
+    &_small {
+      @include accept-button();
+      background-color: #1C1C1C;
+      padding: 5px 15px;
+      border: 0;
+      border-radius: 52px;
+      font-family: 'Roboto';
+      font-size: 16px;
+      font-weight: 400;
+      height: unset;
+    }
   }
 
 
