--- a/src/components/shared/modal/Modal.module.scss
+++ b/src/components/shared/modal/Modal.module.scss
@@ -1,3 +1,6 @@
+@import "src/variables";
+
+
 .modal {
   display: none;
   animation: ani 1s linear;
@@ -12,7 +15,11 @@
   justify-content: center;
   align-items: center;
   opacity: 1;
-  animation: ani .1s ease-in;
+  animation: ani .2s ease-in;
+}
+
+.hidden {
+  @include closeModal();
 }
 
 
@@ -25,31 +32,3 @@
   }
 }
 
-.modal-content {
-  background-color: white;
-  width: 600px;
-  border-radius: 5px;
-  transition: .2s;
-}
-
-.modal-title {
-  padding: 0.8rem;
-  font-size: 1.5rem;
-  border-bottom: 1px solid #aaa;
-  text-align: center;
-}
-
-.modal-body {
-  padding: 1rem;
-}
-
-.modal-footer {
-  border-top: 1px solid #aaa;
-  padding: 0.8rem;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.modal-footer button {
-  cursor: pointer;
-}
