--- a/src/components/shared/info-card/InfoCard.module.scss
+++ b/src/components/shared/info-card/InfoCard.module.scss
@@ -1,7 +1,7 @@
 @import "src/variables";
 
 .container {
-  width: calc((100% - 30px)/2);
+  width: calc((100% - 30px) / 2);
   padding: 50px;
   display: flex;
   border-radius: 12px;
@@ -23,18 +23,23 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 100%;
 
 
-    &__header {
+    @mixin header() {
+      font-family: 'Roboto';
       display: flex;
       align-items: center;
       width: 100%;
-      font-family: 'Roboto';
+      text-align: left;
+      color: black;
+    }
+
+    &__header {
+      @include header();
       font-size: 32px;
       font-weight: 500;
       line-height: 48px;
-      text-align: left;
-      color: black;
 
       &__icon {
         width: 40px;
@@ -42,16 +47,34 @@
         margin-right: 20px;
       }
 
+      &_qa {
+        @include header();
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 28.13px;
+        padding-bottom: 30px;
+        border-bottom: 1px solid #262626;
+      }
+
     }
 
-    &__caption {
+    @mixin caption() {
       font-family: 'Roboto';
       font-size: 18px;
-      font-weight: 400;
       line-height: 27px;
       letter-spacing: -0.006em;
       text-align: left;
       color: #656567;
+    }
+
+    &__caption {
+      @include caption();
+      font-weight: 400;
+
+      &_qa {
+        @include caption();
+        font-weight: 300;
+      }
     }
   }
 
