--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -8,6 +8,10 @@
   justify-content: center;
   background: linear-gradient(white 18%, #3363FF08 18% 100%);
 
+  @include for-size(xxl) {
+    margin-top: $defaultVerticalDistanceVw
+  }
+
   //@include for-size(xxl) {
   //  margin-top: $defaultVerticalDistanceVw;
   //}
