--- a/src/components/projects/components/open-banking-api/OpenBankingApi.module.scss
+++ b/src/components/projects/components/open-banking-api/OpenBankingApi.module.scss
@@ -7,6 +7,14 @@
   flex-direction: column;
   align-items: center;
 
+  @include for-size(xxl) {
+    margin-top: $defaultVerticalDistanceVw;
+  }
+
+  @include for-size(xl) {
+    padding-bottom: 7vw;
+  }
+
   .header-block {
     //margin-bottom: 80px;
 
