add new features

--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -40,7 +40,9 @@
 
 
     &__info {
-      max-width: 39.32vw;
+      max-width: 755px;
+      width: 39.32vw;
+      min-width: 550px;
       padding-bottom: 8px;
 
 
