--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -12,19 +12,27 @@
     margin-top: $defaultVerticalDistanceVw;
   }
 
-  .common-info {
-    margin: 100px 8.4375vw 0;
+  @mixin common-block-params() {
     max-width: 1596px;
     width: 100%;
     display: flex;
+    padding-bottom: 50px;
+
+    @include for-size(xxl) {
+      padding-bottom: 2.6vw;
+    }
+  }
+
+
+  .common-info {
+    @include common-block-params();
+    margin: 100px 8.4375vw 0;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 50px;
     border-bottom: 1px solid #262626;
 
     @include for-size(xxl) {
       margin-top: 5.2vw;
-      padding-bottom: 2.6vw;
     }
 
     &__navigation {
@@ -48,6 +56,69 @@
         }
       }
     }
+  }
 
+  .contacts {
+    @include common-block-params();
+    margin: 50px 8.4375vw 0;
+    border-bottom: 1px solid #262626;
+    justify-content: center;
+    gap: 20px;
+
+    @include for-size(xxl) {
+      margin-top: 2.6vw;
+    }
+
+    @mixin item-base() {
+      display: flex;
+      align-items: center;
+      font-family: 'Roboto';
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 27px;
+      text-align: left;
+      color: #E4E4E7;
+      text-decoration: none;
+      gap: 6px;
+    }
+
+    &__item {
+      @include item-base();
+
+      &_non-clickable {
+        @include item-base();
+        &:hover {
+          cursor: unset;
+        }
+      }
+    }
+  }
+
+  .organization-info {
+    @include common-block-params();
+    margin: 50px 8.4375vw 0;
+    justify-content: center;
+
+    @include for-size(xxl) {
+      margin-top: 2.6vw;
+    }
+
+    &__requisites {
+      width: 100%;
+      padding: 16px 0;
+      border-radius: 100px;
+      border: 1px solid #262626;
+      background: #1A1A1A;
+
+
+      &__item {
+        font-family: 'Roboto';
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 27px;
+        text-align: center;
+        color: #B3B3B3;
+      }
+    }
   }
 }
