--- a/src/components/how-to-start/HowToStart.module.scss
+++ b/src/components/how-to-start/HowToStart.module.scss
@@ -18,6 +18,7 @@
     }
 
     .info {
+      width: 100%;
       display: flex;
       flex-direction: column;
 
@@ -42,7 +43,7 @@
         }
 
         .step-container {
-          max-width: 532px;
+          max-width: 465px;
           width: 27.67vw;
           display: flex;
           flex-direction: column;
