--- a/src/components/shared/logo/Logo.module.scss
+++ b/src/components/shared/logo/Logo.module.scss
@@ -1,10 +1,7 @@
 @import "src/variables";
 
 .container {
-  width: 162px;
-  height: 40px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 
   &:hover {
@@ -21,6 +18,7 @@
     font-size: 32px;
     font-weight: 900;
     line-height: 39px;
+    margin-left: 16px;
     color: $mainBlueColor;
   }
 
@@ -30,7 +28,7 @@
     &_can-hide {
       @include caption-base();
 
-      @include for-size(m) {
+      @include for-size(l) {
         display: none;
       }
     }
