--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -105,7 +105,7 @@
 
     &__requisites {
       width: 100%;
-      padding: 16px 0;
+      padding: 16px 30px;
       border-radius: 100px;
       border: 1px solid #262626;
       background: #1A1A1A;
