--- a/src/components/shared/button/Button.module.scss
+++ b/src/components/shared/button/Button.module.scss
@@ -1,47 +1,20 @@
 @import "./../../../variables";
 
-@mixin accept-button () {
-  height: 63px;
-  padding: 18px 30px 18px 30px;
-  gap: 10px;
-  border: 0;
-  border-radius: 82px;
-  font-family: 'Roboto';
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  text-align: center;
-  color: #FFFFFF;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
 
 .accept-button {
-  @include accept-button();
-
-  &_blue {
-    @include accept-button();
-    background-color: $mainBlueColor;
-  }
-
-  &_black {
-    @include accept-button();
-    background-color: #1C1C1C;
-
-    &_small {
-      @include accept-button();
-      background-color: #1C1C1C;
-      padding: 5px 15px;
-      border: 0;
-      border-radius: 52px;
-      font-family: 'Roboto';
-      font-size: 16px;
-      font-weight: 400;
-      height: unset;
-    }
-  }
+  width: 185px;
+  padding: 12px 16px;
+  gap: 4px;
+  border: 0px;
+  border-radius: 8px;
+  font-family: 'Montserrat';
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 20.72px;
+  letter-spacing: -0.5px;
+  text-align: center;
+  background-color: $mainRedColor;
+  color: white;
 
 
   &:hover {
