--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,7 +9,7 @@ $minifiedHorizontalDistance: 15px;
 
 $mainHeader1FontSize: 48px;
 $minifiedHeader1FontSize: 32px;
-$mainHeader1LineHeight: 56.25px;
+$mainHeader1LineHeight: 58px;
 $minifiedHeader1LineHeight: 38px;
 $mainHeader2FontSize: 32px;
 $mainHeader2LineHeight: 48px;
@@ -24,16 +24,22 @@ $maxCiteWidthPx: 1596px;
 
 //colors
 
+$mainRedColor: #F74D4D;
+
 $mainBlueColor: #338BFF;
 $backgroundColor1: #FFFFFF;
 $backgroundColor2: #3363FF08;
 
 
 @mixin h1() {
-  font-family: 'Roboto';
+  font-family: 'Montserrat';
   font-size: $mainHeader1FontSize;
   font-weight: 700;
   line-height: $mainHeader1LineHeight;
+  text-align: left;
+  letter-spacing: -1.8px;
+
+
 
   //@include for-size(l) {
   //  font-size: $minifiedHeader1FontSize;
