--- a/src/components/main/components/header/Header.module.scss
+++ b/src/components/main/components/header/Header.module.scss
@@ -1,6 +1,8 @@
 @import "../../../../variables";
 
 .container {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: center;
   width: 100%;
